--- a/director/templates/director/add_task_director.html
+++ b/director/templates/director/add_task_director.html
@@ -1,4 +1,4 @@
-{% extends 'manager2/layout.html' %}
+{% extends 'director/layout.html' %}
 {% block content %}
 <div class="task-container">
     <div class="header">
