--- a/manager2/templates/manager2/employee.html
+++ b/manager2/templates/manager2/employee.html
@@ -30,10 +30,10 @@
                     {% if user.is_active %}
                     <tr class="fade-in-item">
                         <td>
-                            {% if user.is_online %}
-                                <span style="color: green; font-weight: bold;">● Онлайн</span>
+                            {% if user.timer_active %}
+                                <span style="color: green; font-weight: bold;">● Таймер запущен</span>
                             {% else %}
-                                <span style="color: red; font-weight: bold;">● Оффлайн</span>
+                                <span style="color: red; font-weight: bold;">● Таймер остановлен</span>
                             {% endif %}
                         </td>
                         <td>{{ user.full_name }}</td>
