--- a/users/templates/users/photo_maket.html
+++ b/users/templates/users/photo_maket.html
@@ -125,7 +125,7 @@
                     {% endfor %}
                 </div>
 
-                <a href="{% url 'maket_info_all' photo.id %}" class="btn btn-primary">Подробнее</a>
+                <a href="{% url 'maket_info' photo.id %}" class="btn btn-primary">Подробнее</a>
             </div>
         </div>
         {% endfor %}
