--- a/users/templates/users/select_task.html
+++ b/users/templates/users/select_task.html
@@ -25,22 +25,20 @@
         <form method="post" class="fade-in-item">
             {% csrf_token %}
             <label for="task" class="task fade-in-item">Выберите задачу:</label>
-            <select name="task_id" id="task" required class="fade-in-item">
-                <option value="">Выберите задачу</option>
-                {% for task in tasks %}
-                    {% if not task.is_submitted_for_review %}
-                        <option value="{{ task.id }}" 
-                                {% if task in assigned_tasks %}class="assigned-task"{% endif %}>
-                            {{ task.title }}
-                            {% if task in assigned_tasks %}(Назначена вам){% endif %}
-                        </option>
-                    {% else %}
-                        <option value="" disabled class="review-task">
-                            {{ task.title }} (Отправлена на проверку)
-                        </option>
-                    {% endif %}
-                {% endfor %}
-            </select>
+            <select name="task_id" id="task" required>
+    <option value="">Выберите задачу</option>
+    {% for task in tasks %}
+        {% if not task.is_submitted_for_review %}
+            {% if request.user in task.assigned_user.all %}
+                <option value="{{ task.id }}">{{ task.title }} (вы назначены)</option>
+            {% else %}
+                <option value="{{ task.id }}">{{ task.title }}</option>
+            {% endif %}
+        {% else %}
+            <option value="" disabled>{{ task.title }} (на проверке)</option>
+        {% endif %}
+    {% endfor %}
+</select>
             <button type="submit" class="fade-in-item">Выбрать задачу</button>
         </form>
     </div>
